@@ -15,6 +15,7 @@ Bugfixes:
  * Search paths on "Programs" options are not saved (248648)
  * Crash on generation of DVD previews in DVD ripping list (249941)
  * Crash on closing dialog after succesful audio CD ripping (241630)
+ * Crash on device detection (249371)
 
 2.0.1
 =====
